# logic-sim

./: CMakeLists.txt  main.py
app/: CMakeLists.txt
app/GUI/: CMakeLists.txt
app/GUI/include/: mainWindow.hpp  parts.hpp
app/main/: CMakeLists.txt
app/main/src/: main.cpp
app/simulation/: CMakeLists.txt
app/simulation/inc/: IComponent.hpp
cmake/: fetch_external_dependencies.cmake
src/: LogicDisplay.py  LogicIO.py  MainWindow.py  PartsList.py
